--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "node": "^21.1.0",
+    "nodemon": "^3.1.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
